# utilities

./: .gitignore  .ticker.yaml  README.md  create.sh  sv-build.sh  svelteComponentsBun.sh  svelteComponentsPnpm.sh
Alt-AI-Labs/: Cargo.toml
Alt-AI-Labs/Dashboard/: .gitignore  README.md  package-lock.json  package.json
Alt-AI-Labs/Dashboard/prompts/: architecture.md  initial.md  next-steps.md  output of install.txt
Alt-AI-Labs/Dashboard/src/routes/: +layout.svelte  +page.svelte  layout.css
Alt-AI-Labs/doc/: compile steps.txt  example-bookmark.md  rmcp-1.6-upgrade.md  xapimcp-x-refresh-token.md
Alt-AI-Labs/githubmcp/: .env.example  githubmcp.service
Alt-AI-Labs/prompts/: 01.md  02.md  Overview0329.md  Reactor.md  bookmarks.md  continue-sma.md  new_fields.md  populate_new_fields_plan.md  project.md  salt-master-agent.md  update-xbookmark-puller  upgrade-xbookmark-puller  xbookmark-gant.md
Alt-AI-Labs/salt-master-agent/: Cargo.toml  README.md  lastOne0329.md
Alt-AI-Labs/salt-master-agent/prompts/: summary.md  updates.md
Alt-AI-Labs/salt-master-agent/src/: agent.rs  config.rs  error.rs  main.rs  mcp.rs
Alt-AI-Labs/salt-master-agent/src/agents/: bookmark_processor.rs  mod.rs
Alt-AI-Labs/saltapimcp/: Cargo.toml  Dockerfile
Alt-AI-Labs/saltapimcp/servicefiles/: saltapimcp.service
Alt-AI-Labs/saltapimcp/src/: main.rs
Alt-AI-Labs/saltapimcp/src/cli/: mod.rs
Alt-AI-Labs/saltapimcp/src/config/: mod.rs
Alt-AI-Labs/saltapimcp/src/server/: mod.rs
Alt-AI-Labs/saltapimcp/src/tools/: mod.rs
Alt-AI-Labs/surrealmcp/: Cargo.toml
Alt-AI-Labs/surrealmcp/src/: main.rs
Alt-AI-Labs/surrealmcp/src/cli/: mod.rs
Alt-AI-Labs/surrealmcp/src/cloud/: mod.rs
Alt-AI-Labs/surrealmcp/src/db/: mod.rs
Alt-AI-Labs/surrealmcp/src/logs/: mod.rs
Alt-AI-Labs/surrealmcp/src/prompts/: mod.rs
Alt-AI-Labs/surrealmcp/src/resources/: mod.rs
Alt-AI-Labs/surrealmcp/src/server/: auth.rs  http.rs  limit.rs  start.rs
Alt-AI-Labs/surrealmcp/src/tools/: mod.rs
Alt-AI-Labs/surrealmcp/src/utils/: mod.rs
Alt-AI-Labs/xapimcp/: Cargo.toml
Alt-AI-Labs/xapimcp/compile-errors/: 01.txt
Alt-AI-Labs/xapimcp/servicefiles/: .env.example  xapimcp.service
Alt-AI-Labs/xapimcp/src/: dotenv_load.rs  main.rs  x_oauth.rs
Alt-AI-Labs/xapimcp/src/cli/: mod.rs
Alt-AI-Labs/xapimcp/src/config/: mod.rs
Alt-AI-Labs/xapimcp/src/server/: mod.rs
Alt-AI-Labs/xapimcp/src/tools/: mod.rs
Alt-AI-Labs/xapimcp/src/x/: mod.rs
Alt-AI-Labs/xbookmark-puller/: Cargo.toml  Dockerfile
Alt-AI-Labs/xbookmark-puller/errors/: 01.txt
Alt-AI-Labs/xbookmark-puller/servicefiles/: .env.example  xbookmark-puller.service
Alt-AI-Labs/xbookmark-puller/src/: main.rs
ansible/afjh-dg/: containment.md  inventory.ini  site.yml  trans.md
ansible/afjh-dg/group_vars/: all.yml
ansible/afjh-dg/roles/airflow/: grok.md
ansible/afjh-dg/roles/dgraph/: dgraph-alpah.service  dgraph-zero.service
coursera/: README.md
jupyter/: install_jupyter_lab.sh  install_jupyter_notebook-v2.sh  install_jupyter_notebook-v3.sh  install_jupyter_notebook-v4.sh  install_jupyter_notebook.sh
k8s/: README.md  TODO.md  ansibleInstall.sh  containerd.yaml  hosts.ini  uninstall-rke.sh
k8s/RKE2/: README.md  site.yaml
k8s/RKE2/inventory/: hosts.ini
k8s/RKE2/inventory/group_vars/: all.yaml
k8s/RKE2/roles/add-agent/: README.md
k8s/RKE2/roles/add-server/: README.md
k8s/RKE2/roles/apply-manifests/: README.md
k8s/RKE2/roles/prepare-nodes/: README.md
k8s/RKE2/roles/rke2-download/: README.md
k8s/RKE2/roles/rke2-prepare/: README.md
k8s/ansibleOSX/: README.md  setup_ansible_and_push_keys.sh
k8s/hosts/: hosts.ini
k8s/rke/: cluster.rkestate  cluster.yml  ts-rke2.sh  ts.out
k8s/rke-role/: rke2-install.yaml
k8s/rke-role/pre-install/: rk2r.yml
k8s/rke-role/pre-install/test-01/: disk_usage_node3.txt  disk_usage_node4.txt  disk_usage_node5.txt  disk_usage_node7.txt  disk_usage_node8.txt  disk_usage_node9.txt  etc_tree_node1.txt  etc_tree_node2.txt  etc_tree_node3.txt  etc_tree_node4.txt  etc_tree_node5.txt  etc_tree_node6.txt  etc_tree_node7.txt  etc_tree_node8.txt  etc_tree_node9.txt  installed_packages_node4.txt  installed_packages_node8.txt  network_config_node1.txt  network_config_node2.txt  network_config_node3.txt  network_config_node4.txt  (+28 more)
k8s/setupOSX-Nodes/: cd.txt  output.txt  setup_ansible_and_push_keys-osx.sh  setup_ansible_and_push_keys-ubuntu.sh  ts-install.sh
k8s/setupOSX-Nodes/ansible/: containerd.yml  fix.yml  hosts.ini  node-token  rke2.yml  uninstall.yml
prompts/: certs.md
py2neo/: DockerFile  cpg-docker  doIt.py
salt/: ansible.cfg  inventory.yml  mkcert-ca.pem
salt-agent-master/: prompt-01.md  prompt-02.md  prompt-03.md  test-args.sh  test.sh  test_tool.py
salt-agent-master/containers/: error.txt  install_surrealmcp.sh
salt-agent-master/src/: master_agent.py  tools.py
salt/errors/: 01.err  salt-master+api.yml
salt/playbook/: salt_master.yml  salt_master_api_nginx.yml  salt_minions.yml
salt/scripts/: test.sh
saltapimcp/: Cargo.toml  Dockerfile
saltapimcp/servicefiles/: saltapimcp.service
saltapimcp/src/config/: mod.rs
saltapimcp/src/salt/: mod.rs
saltapimcp/src/server/: mod.rs
saltapimcp/src/tools/: mod.rs
surrealmcp/: Cargo.toml  Dockerfile  prompt01.md
surrealmcp/src/engine/: mod.rs
surrealmcp/src/tools/: mod.rs
surrealmcp/src/utils/: mod.rs
voidLinux/: void-install.sh
wasm/my_surrealism_module/: .gitignore  Cargo.toml  feature.md  fix.md  my_module.surli  surrealism.toml
wasm/my_surrealism_module/src/: lib.rs
xapimcp/: Cargo.toml
xapimcp/servicefiles/: .env.example  xapimcp.service
xapimcp/src/: Dockerfile  main.rs
xapimcp/src/server/: mod.rs
xapimcp/src/tools/: mod.rs
xapimcp/src/x/: mod.rs
(+65 files in other folders)
