[package]
name = "saltapimcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
rmcp = { version = "0.6", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }