[package]
name = "salt-master-agent"
version = "0.1.0"
edition = "2024"
description = "Stateless SaltStack master agent: Ollama + Rig + rmcp MCP tools only."
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10", features = ["env", "toml"] }
rig = { package = "rig-core", version = "0.36", features = ["rmcp", "reqwest", "rustls"] }
rmcp = { version = "1.6", features = [
    "client",
    "macros",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "transport-worker",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "http2",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
