[package]
name = "xapimcp"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
oauth2 = { version = "4", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.6", features = ["server", "macros", "transport-streamable-http-server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }