[package]
name = "xbookmark-puller"
version = "0.1.0"
edition = "2024"
description = "Pull X bookmarks via xapimcp MCP, dedupe via SurrealMCP, store, then delete via xapimcp."
publish = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
rmcp = { version = "0.16", features = [
    "client",
    "transport-streamable-http-client-reqwest",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
